# helix_vpn

./: .gitignore  .gitmodules  .helix-manifest.yaml  AGENTS.html  AGENTS.md  CLAUDE.html  CLAUDE.md  CONSTITUTION.html  CONSTITUTION.md  GEMINI.md  Makefile  QWEN.html  QWEN.md  README.docx  README.html  README.md  go.mod  test_all.sh
.docs_chain/contexts/: design.yaml  spec-exports.yaml  workable-items.yaml
.githooks/: pre-commit
.github/workflows/: constitution.yml  constitution.yml.disabled-local-only
.gitignore-meta/: docs-chain-state.yaml  mermaid-cache.yaml
cmd/workable-items/: dbtomd_epic_milestone_test.go  main.go
deploy/: remote-hosts.env
deploy/quadlets/: helix-coordinator.container  helix-edge.container  helix-pg-data.volume  helix-pg.container  helix-redis-data.volume  helix-redis.container  helix.pod
docs/: CONTINUATION.docx  CONTINUATION.html  CONTINUATION.md  test-coverage.html  test-coverage.md  workable_items.db
docs/audit/: submodule-audit-20260708.md
docs/design/: README.md
docs/guides/: HELIX_VPN_CONSTITUTION.docx  HELIX_VPN_CONSTITUTION.html  HELIX_VPN_CONSTITUTION.md
docs/research/: CROSS_CUTTING_GAP_ANALYSIS.docx  CROSS_CUTTING_GAP_ANALYSIS.html  CROSS_CUTTING_GAP_ANALYSIS.md  GOVERNANCE_INHERITANCE_AUDIT.docx  (+5 more)
scripts/: commit_all.sh  demo.sh  docs_chain_md_to_db.sh  install_git_hooks.sh  post_constitution_update.sh  spike.sh  verify-all-constitution-rules.sh  workable_items_loader.py
scripts/bench/tools/rust_edge_bench/: Cargo.toml
scripts/bench/tools/rust_edge_bench/src/: main.rs
tests/: pre_build_verification.sh  test_constitution_inheritance.sh
tools/: opendesign
upstreams/: github.sh
(+743 files in other folders)
